--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.14",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
-    "tailwindcss": "^4"
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.4.0"
   }
 }
