--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.79.0",
-    "next": "16.0.1",
+    "next": "^15.1.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
